--- a/bank/src/main/resources/static/enter_account.html
+++ b/bank/src/main/resources/static/enter_account.html
@@ -2,15 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
     <meta charset="utf-8">
-    <title>Dashboard - Main Page</title>
-        <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css">
-        <link type="text/css" rel="stylesheet" href="../css/style.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Log In</title>
-    </head>
+    <title>Dashboard - Enter Account </title>
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Log In</title>
+</head>
 <body>
 <header>
     <nav class="nav-extended blue-grey">
@@ -38,20 +38,18 @@
         <li>
         <li><a href="#profile-modal" class="modal-trigger waves-effect waves-light btn"><i class="material-icons">face</i>Editar perfil</a></li>
         <li><a href="#password-modal" class="modal-trigger waves-effect waves-light btn"><i class="material-icons">lock</i>Cambiar clave</a></li>
-<!--        <li><a href="intentosusuario.php"><i class="material-icons left">gpp_maybe</i>Intentos Usuario</a></li>-->
-<!--        <li><a href="historialsesion.php"><i class="material-icons left">verified_user</i>Historial de Sesiones</a></li>-->
+        <!--        <li><a href="intentosusuario.php"><i class="material-icons left">gpp_maybe</i>Intentos Usuario</a></li>-->
+        <!--        <li><a href="historialsesion.php"><i class="material-icons left">verified_user</i>Historial de Sesiones</a></li>-->
         <div class="divider"></div>
         </li>
     </ul>
-    <!-- Componente Modal para mostrar el formulario de editar perfil -->
+    <!-- Profile modal -->
     <div id="profile-modal" class="modal">
         <div class="modal-content center-align">
             <h4></h4>
-            <!-- Título para la caja de dialogo -->
             <h4 id="modal-titles" class="center-align"></h4>
-            <!-- Formulario para crear o actualizar un registro -->
             <form method="post" id="profile-form">
-                <!-- Campo oculto para asignar el id del registro al momento de modificar -->
+                <!-- hid label -->
                 <input class="hide" type="number" id="id_usuario" name="id_usuario"/>
                 <div class="row">
                     <div class="input-field col s12 m6">
@@ -88,7 +86,7 @@
         </div>
     </div>
 
-    <!-- Componente Modal para mostrar el formulario de cambiar contraseña -->
+    <!--Password modal -->
     <div id="password-modal" class="modal">
         <div class="modal-content">
             <h4 class="center-align">Cambiar contraseña</h4>
@@ -114,92 +112,53 @@
             </form>
         </div>
     </div>
-   </header>
-    <main>
-    <div class="main-container">
-     <div class="row">
+</header>
+<main>
+    <div class="container">
+        <div class="row">
 
-        <div class="col s12 m12 l12 right" >
-            <div class="card horizontal" >
-                <div class="card-stacked">
-                   <div class="card-content">
-                        <div class="row">
-
-                            <div class="col s12 m2 l3">
-                                <div class="card center-align" >
-                                    <i class="large material-icons">payments</i>
-                                    <div class="card-block">
-                                        <br>
-                                        <a href="your_balance.html" class="card-title center-align">Query Balance</a>
-                                        <br>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col s12 m2 l3">
-                                <div class="card center-align" >
-                                    <i class="large material-icons">local_atm</i>
-                                    <div class="card-block">
-                                        <br>
-                                        <a href="account_transference.html" class="card-title text-center">Account Transference</a>
-                                        <br>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col s12 m2 l3">
-                                <div class="card center-align" >
-                                    <i class="large material-icons">local_atm</i>
-                                    <div class="card-block">
-                                        <br>
-                                        <a href="make_transaction.html" class="card-title text-center">Make a Transaction</a>
-                                        <br>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col s12 m2 l3">
-                                <div class="card center-align" >
-                                    <i class="large material-icons">local_atm</i>
-                                    <div class="card-block">
-                                        <br>
-                                        <a href="pay_service.html" class="card-title text-center">Pay Services</a>
-                                        <br>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
+            <H2>Enter your Account number and your Password to use it</H2>
+    <div class="input-field col s12 m6 offset-m3">
+        <i class="material-icons prefix">person_pin</i>
+        <input id="account_number" type="text" name="account_number" class="validate" oncopy="return false" oncut="return false" onpaste="return false" required/>
+        <label for="account_number">Account Number</label>
+    </div>
+            <div class="input-field col s12 m6 offset-m3">
+                <i class="material-icons prefix">security</i>
+                <input id="r_password" type="password" name="r_password" class="validate" oncopy="return false" oncut="return false" onpaste="return false" required/>
+                <label for="r_password">Password</label>
+            </div>
+    <div class="col s12 center-align">
+        <button type="submit" class="btn waves-effect blue tooltipped" data-tooltip="Enter"><i class="material-icons">send</i></button>
+        <br>
+        <a href="">Create a Acount</a>
+    </div>
+   </div>
+    </div>
+</main>
+<!--Footer-->
+<footer class="page-footer blue-grey ">
+    <div class="container">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">Bank</h5>
+            </div>
+            <div class="col l4 offset-l2 s12">
             </div>
         </div>
-     </div>
-     </div>
-    </main>
-    <!--Footer-->
-    <footer class="page-footer blue-grey ">
+    </div>
+    <div class="footer-copyright">
         <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Bank</h5>
-                </div>
-                <div class="col l4 offset-l2 s12">
-                </div>
-            </div>
+            © 2022 Copyright
         </div>
-        <div class="footer-copyright">
-            <div class="container">
-                © 2022 Copyright
-            </div>
-        </div>
-    </footer>
-    <!--Optimized JS Archives-->
+    </div>
+</footer>
+<!--Optimized JS Archives-->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
-<script type="text/javascript" src="../JS/init.js"></script>
+<script type="text/javascript" src="JS/init.js"></script>
 <script type="text/javascript" src=""></script>
- </body>
+</body>
 </html>
