--- a/bank/src/main/resources/static/your_balance.html
+++ b/bank/src/main/resources/static/your_balance.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
     <meta charset="utf-8">
-    <title>Dashboard - Make a Transaction </title>
+    <title>Dashboard - Account Transference </title>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css">
-    <link type="text/css" rel="stylesheet" href="../css/style.css" />
+    <link type="text/css" rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log In</title>
 </head>
@@ -85,7 +85,6 @@
             </form>
         </div>
     </div>
-
     <!--Password modal -->
     <div id="password-modal" class="modal">
         <div class="modal-content">
@@ -112,48 +111,26 @@
             </form>
         </div>
     </div>
+<!--    end Modal -->
 </header>
 <main>
     <div class="container">
         <div class="row">
 
-            <div class="col s12 m12 l12 right" >
-                <div class="card horizontal" >
-                    <div class="card-stacked">
-                        <span class="card-title center-align">Select a Operation</span>
-                        <div class="card-content">
-                            <div class="row">
+            <h2>Your Balance is:</h2>
+            <div class="col s12 m12 12">
+                <table class="responsive-table highlight">
+                    <thead>
+                    <tr>
+                        <th> Amount </th>
+                        <th>$ USD</th>
+                    </tr>
+                    </thead>
+                    <tbody id="tbody-rows">
+                    </tbody>
+                </table>
+            </div>
 
-                                <div class="col s12">
-                                    <div class="card center-align" >
-                                        <i class="large material-icons">payments</i>
-                                        <div class="card-block">
-                                            <br></br>
-                                            <a href="" class="card-title center-align">Retirement</a>
-                                            <br>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <div class="col s12">
-                                    <div class="card center-align" >
-                                        <i class="large material-icons">local_atm</i>
-                                        <div class="card-block">
-                                            <br></br>
-                                            <a href="" class="card-title text-center">Deposit</a>
-                                            <br>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-
-                            </div>
-                        </div>
-                    </div>
-                 </div>
-                 </div>
 
         </div>
     </div>
@@ -180,7 +157,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
-<script type="text/javascript" src="../JS/init.js"></script>
+<script type="text/javascript" src="JS/init.js"></script>
 <script type="text/javascript" src=""></script>
 </body>
 </html>
