agregando Clientscontroller y cracion de  3 tablas
las tablas y la base se crean solas no hay que crearlas

--- a/bank/src/main/resources/static/register.html
+++ b/bank/src/main/resources/static/register.html
@@ -20,42 +20,42 @@
 
     <br>
     <div class="container">
-        <form method="post" id="register-form">
+        <form  id="register-form">
             <div class="row">
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">person</i>
-                    <input id="nombres" type="text" name="nombres" class="validate" required/>
-                    <label for="nombres">Name</label>
+                    <input id="txtName" type="text" name="nombres" class="validate" required/>
+                    <label for="txtName">Name</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">person</i>
-                    <input id="apellidos" type="text" name="apellidos" class="validate" required/>
-                    <label for="apellidos">Surname</label>
+                    <input id="txtLastName" type="text" name="apellidos" class="validate" required/>
+                    <label for="txtLastName">Surname</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">email</i>
-                    <input id="correo" type="email" name="correo" class="validate" required/>
-                    <label for="correo">Email</label>
+                    <input id="txtEmail" type="email" name="correo" class="validate" required/>
+                    <label for="txtEmail">Email</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">person_pin</i>
-                    <input id="alias" type="text" name="alias" class="validate" required/>
-                    <label for="alias">User</label>
+                    <input id="txtUsername" type="text" name="alias" class="validate" required/>
+                    <label for="txtUsername">User</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">security</i>
-                    <input id="clave1" type="password" name="clave1" class="validate" required/>
-                    <label for="clave1">Password</label>
+                    <input id="txtPassword" type="password" name="clave1" class="validate" required/>
+                    <label for="txtPassword">Password</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">security</i>
-                    <input id="clave2" type="password" name="clave2" class="validate" required/>
-                    <label for="clave2">Confirm Password</label>
+                    <input id="txtPassword2" type="password" name="clave2" class="validate" required/>
+                    <label for="txtPassword2">Confirm Password</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">location_on</i>
-                    <input id="txtDireccion" type="text" name="txtDireccion" placeholder="00000000-0" pattern="[0-9]{8}[-][0-9]{1}" oncopy="return false" oncut="return false"  class="validate" required />
-                    <label for="txtDireccion">DNI</label>
+                    <input id="txtDNI" type="text" name="txtDireccion" placeholder="00000000-0" pattern="[0-9]{8}[-][0-9]{1}" oncopy="return false" oncut="return false"  class="validate" required />
+                    <label for="txtDNI">DNI</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">phone</i>
@@ -64,7 +64,11 @@
                 </div>
             </div>
             <div class="row center-align">
-                <button type="submit" class="loginbutton">Agregar Usuario</button>
+               <!-- <button type="submit" class="loginbutton">Agregar Usuario</button>-->
+                <a onclick="addUsers()" href="#" class="btn btn-primary btn-user btn-block">
+                    Registrarse
+                </a>
+                <hr>
             </div>
         </form>
     </div>
@@ -94,6 +98,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
 <script type="text/javascript" src="JS/init.js"></script>
-<script type="text/javascript" src=""></script>
+<script type="text/javascript" src="JS/register.js"></script>
 </body>
 </html>
