--- a/bank/src/main/resources/static/account_transference.html
+++ b/bank/src/main/resources/static/account_transference.html
@@ -124,9 +124,9 @@
                 <label for="account_number_transfer">Account Number To Transfer</label>
             </div>
             <div class="col s12 center-align">
-                <button type="submit" class="btn waves-effect blue tooltipped" data-tooltip="OK"><i class="material-icons">send</i></button>
+                <a href="transference_count.html" type="submit" class="btn waves-effect blue tooltipped" data-tooltip="OK"><i class="material-icons">send</i></a>
                 <br>
-                <a href=""></a>
+                <a href="transference_count.html"></a>
             </div>
 
         </div>
