--- a/bank/src/main/resources/static/account_transference.html
+++ b/bank/src/main/resources/static/account_transference.html
@@ -115,16 +115,16 @@
 </header>
 <main>
     <div class="container">
-        <div class="row">
+        <div class="row" >
 
             <H2>Enter your Account number to transfer</H2>
-            <div class="input-field col s12 m6 offset-m3">
+            <div class="input-field col s12 m6 offset-m3" method="post">
                 <i class="material-icons prefix">person_pin</i>
-                <input id="account_number_transfer" type="text" name="account_number_transfer" class="validate" oncopy="return false" oncut="return false" onpaste="return false" required/>
+                <input id="account_number_transfer" type="text" name="account_number_transfer" class="validate" oncopy="return false" oncut="return false" onpaste="return true" required/>
                 <label for="account_number_transfer">Account Number To Transfer</label>
             </div>
             <div class="col s12 center-align">
-                <a href="transference_count.html" type="submit" class="btn waves-effect blue tooltipped" data-tooltip="OK"><i class="material-icons">send</i></a>
+                <a href="#" onclick="searchNumber()" type="submit" class="btn waves-effect blue tooltipped" data-tooltip="OK"><i class="material-icons">send</i></a>
                 <br>
                 <a href="transference_count.html"></a>
             </div>
@@ -155,6 +155,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
 <script type="text/javascript" src="JS/init.js"></script>
-<script type="text/javascript" src=""></script>
+<script type="text/javascript" src="JS/account_number.js"></script>
 </body>
 </html>
