--- a/bank/src/main/resources/static/transference_count.html
+++ b/bank/src/main/resources/static/transference_count.html
@@ -160,6 +160,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
 <script type="text/javascript" src="JS/init.js"></script>
-<script type="text/javascript" src=""></script>
+<script type="text/javascript" src="JS/transference_operations.js"></script>
 </body>
 </html>
