--- a/bank/src/main/resources/static/main.html
+++ b/bank/src/main/resources/static/main.html
@@ -38,6 +38,10 @@
         <li>
         <li><a href="#profile-modal" class="modal-trigger waves-effect waves-light btn"><i class="material-icons">face</i>Editar perfil</a></li>
         <li><a href="#password-modal" class="modal-trigger waves-effect waves-light btn"><i class="material-icons">lock</i>Cambiar clave</a></li>
+
+        <!--BOTON CERRAR SESION-->
+
+        <li> <a onclick="destroyToken()" href="#" class="btn btn-danger ">Cerrar sesion</a></li>
 <!--        <li><a href="intentosusuario.php"><i class="material-icons left">gpp_maybe</i>Intentos Usuario</a></li>-->
 <!--        <li><a href="historialsesion.php"><i class="material-icons left">verified_user</i>Historial de Sesiones</a></li>-->
         <div class="divider"></div>
@@ -200,6 +204,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
 <script type="text/javascript" src="JS/init.js"></script>
-<script type="text/javascript" src=""></script>
+<script type="text/javascript" src="Js/destroyToken.js"></script>
  </body>
 </html>
