adding login & register user

--- a/bank/src/main/resources/static/main.html
+++ b/bank/src/main/resources/static/main.html
@@ -42,6 +42,13 @@
 <!--        <li><a href="historialsesion.php"><i class="material-icons left">verified_user</i>Historial de Sesiones</a></li>-->
         <div class="divider"></div>
         </li>
+        <!--BOTON CERRAR SESION-->
+
+        <li> <a onclick="destroyToken()" href="#" class="btn red ">Cerrar sesion</a></li>
+        <!--        <li><a href="intentosusuario.php"><i class="material-icons left">gpp_maybe</i>Intentos Usuario</a></li>-->
+        <!--        <li><a href="historialsesion.php"><i class="material-icons left">verified_user</i>Historial de Sesiones</a></li>-->
+        <div class="divider"></div>
+        </li>
     </ul>
     <!-- Componente Modal para mostrar el formulario de editar perfil -->
     <div id="profile-modal" class="modal">
@@ -200,6 +207,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
 <script type="text/javascript" src="JS/init.js"></script>
-<script type="text/javascript" src=""></script>
+<script type="text/javascript" src="JS/destroyToken.js"></script>
  </body>
 </html>
