--- a/bank/src/main/resources/static/transference_count.html
+++ b/bank/src/main/resources/static/transference_count.html
@@ -121,15 +121,15 @@
             <div class="input-field col s12 m6 offset-m3">
                 <i class="material-icons prefix">person_pin</i>
                 <input id="account_number_transfer" type="number" name="account_number_transfer" max="9999.99" min="0.01" class="validate" oncopy="return false" oncut="return false" onpaste="return false" required/>
-                <label for="account_number_transfer">Account Number To Transfer</label>
+                <label for="account_number_transfer">Amonut Number To Transfer</label>
             </div>
             <div class="col s6 center-align">
-                <button type="submit" class="btn waves-effect blue tooltipped" data-tooltip="OK"><i class="material-icons">send</i></button>
+                <a type="submit" onclick="" class="btn waves-effect blue tooltipped" data-tooltip="OK"><i class="material-icons">send</i></a>
                 <br>
                 <a href=""></a>
             </div>
             <div class="col s6 center-align">
-                <button type="submit" class="btn waves-effect blue tooltipped" data-tooltip="Generate PDF"><i class="material-icons">picture_as_pdf</i></button>
+                <a type="submit" class="btn waves-effect blue tooltipped" data-tooltip="Generate PDF"><i class="material-icons">picture_as_pdf</i></a>
                 <br>
                 <a href=""></a>
             </div>
