changes to main & Transactions Test

--- a/bank/src/main/resources/static/enter_account.html
+++ b/bank/src/main/resources/static/enter_account.html
@@ -123,15 +123,15 @@
         <input id="account_number" type="text" name="account_number" class="validate" oncopy="return false" oncut="return false" onpaste="return false" required/>
         <label for="account_number">Account Number</label>
     </div>
-            <div class="input-field col s12 m6 offset-m3">
-                <i class="material-icons prefix">security</i>
-                <input id="r_password" type="password" name="r_password" class="validate" oncopy="return false" oncut="return false" onpaste="return false" required/>
-                <label for="r_password">Password</label>
-            </div>
+<!--            <div class="input-field col s12 m6 offset-m3">-->
+<!--                <i class="material-icons prefix">security</i>-->
+<!--                <input id="r_password" type="password" name="r_password" class="validate" oncopy="return false" oncut="return false" onpaste="return false" required/>-->
+<!--                <label for="r_password">Password</label>-->
+<!--            </div>-->
     <div class="col s12 center-align">
         <button type="submit" class="btn waves-effect blue tooltipped" data-tooltip="Enter"><i class="material-icons">send</i></button>
         <br>
-        <a href="">Create a Acount</a>
+        <a href="create_account.html">Create a Acount</a>
     </div>
    </div>
     </div>
@@ -159,6 +159,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
 <script type="text/javascript" src="JS/init.js"></script>
-<script type="text/javascript" src=""></script>
+<script type="text/javascript" src="JS/enter_account.js"></script>
 </body>
 </html>
