--- a/bank/src/main/resources/static/register.html
+++ b/bank/src/main/resources/static/register.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">location_on</i>
-                    <input id="txtDNI" type="text" name="txtDireccion" placeholder="00000000-0" pattern="[0-9]{8}[-][0-9]{1}" oncopy="return false" oncut="return false"  class="validate" required />
+                    <input id="txtDNI" type="text" name="txtDNI" placeholder="00000000-0" pattern="[0-9]{8}[-][0-9]{1}" oncopy="return false" oncut="return false"  class="validate" required />
                     <label for="txtDNI">DNI</label>
                 </div>
                 <div class="input-field col s12 m6">
