Transactions Deposit--Retirement

--- a/bank/src/main/resources/static/retirement.html
+++ b/bank/src/main/resources/static/retirement.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
     <meta charset="utf-8">
-    <title>Dashboard - Make a Transaction </title>
+    <title>Dashboard - Account Transference </title>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -117,43 +117,22 @@
     <div class="container">
         <div class="row">
 
-            <div class="col s12 m12 l12 right" >
-                <div class="card horizontal" >
-                    <div class="card-stacked">
-                        <span class="card-title center-align">Select a Operation</span>
-                        <div class="card-content">
-                            <div class="row">
-
-                                <div class="col s12">
-                                    <div class="card center-align" >
-                                        <i class="large material-icons">payments</i>
-                                        <div class="card-block">
-                                            <br></br>
-                                            <a href="retirement.html" class="card-title center-align">Retirement</a>
-                                            <br>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <div class="col s12">
-                                    <div class="card center-align" >
-                                        <i class="large material-icons">local_atm</i>
-                                        <div class="card-block">
-                                            <br></br>
-                                            <a href="deposits.html" class="card-title text-center">Deposit</a>
-                                            <br>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-
-                            </div>
-                        </div>
-                    </div>
-                 </div>
-                 </div>
+            <H3 class="col s12"> Enter the amount to Retire </H3>
+            <div class="input-field col s12 m6 offset-m3">
+                <i class="material-icons prefix">person_pin</i>
+                <input id="account_amountR" type="number" name="account_amountR" max="9999.99" min="0.01" class="validate" oncopy="return false" oncut="return false" onpaste="return false" required/>
+                <label for="account_amountR">Amonut Number To Transfer</label>
+            </div>
+            <div class="col s6 center-align">
+                <a type="submit" onclick="TransactionsOperations()" class="btn waves-effect blue tooltipped" data-tooltip="OK"><i class="material-icons">send</i></a>
+                <br>
+                <a href=""></a>
+            </div>
+            <div class="col s6 center-align">
+                <a type="submit" class="btn waves-effect blue tooltipped" data-tooltip="Generate PDF"><i class="material-icons">picture_as_pdf</i></a>
+                <br>
+                <a href=""></a>
+            </div>
 
         </div>
     </div>
@@ -181,6 +160,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
 <script type="text/javascript" src="JS/init.js"></script>
-<script type="text/javascript" src=""></script>
+<script type="text/javascript" src="JS/retirement.js"></script>
 </body>
 </html>
