--- a/bank/src/main/resources/static/transference_count.html
+++ b/bank/src/main/resources/static/transference_count.html
@@ -117,7 +117,7 @@
     <div class="container">
         <div class="row">
 
-            <H3 class="col s12"> Enter the amount to transfer </H3>
+            <H3 class="col s12"> Enter the amount to Transfer </H3>
             <div class="input-field col s12 m6 offset-m3">
                 <i class="material-icons prefix">person_pin</i>
                 <input id="account_amount" type="number" name="account_amount" max="9999.99" min="0.01" class="validate" oncopy="return false" oncut="return false" onpaste="return false" required/>
