--- a/bank/src/main/resources/static/your_balance.html
+++ b/bank/src/main/resources/static/your_balance.html
@@ -119,18 +119,8 @@
 
             <h2>Your Balance is:</h2>
             <div class="col s12 m12 12">
-                <table class="responsive-table highlight">
-                    <thead>
-                    <tr>
-                        <th> Amount </th>
-                        <th>$ USD</th>
-                    </tr>
-                    </thead>
-                    <tbody id="tbody-rows">
-                    </tbody>
-                </table>
+                <h3 id="yourBalance" name="yourBalance"></h3>
             </div>
-
 
         </div>
     </div>
@@ -158,6 +148,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
 <script type="text/javascript" src="JS/init.js"></script>
-<script type="text/javascript" src=""></script>
+<script type="text/javascript" src="JS/your_balance.js"></script>
 </body>
 </html>
