Changes to AskYourBalance

--- a/bank/src/main/resources/static/your_balance.html
+++ b/bank/src/main/resources/static/your_balance.html
@@ -119,7 +119,7 @@
 
             <h2>Your Balance is:</h2>
             <div class="col s12 m12 12">
-                <h3 id="yourBalance" name="yourBalance"></h3>
+                <input id="yourBalance" type="number" name="yourBalance" max="9999.99" min="0.01" class="disabled" oncopy="return false" oncut="return false" onpaste="return false" required/>
             </div>
 
         </div>
