agregando unite y un test unitario de comparacion de passwordd

--- a/bank/src/main/resources/static/main.html
+++ b/bank/src/main/resources/static/main.html
@@ -222,5 +222,6 @@
 <script type="text/javascript" src="JS/init.js"></script>
 <script type="text/javascript" src="JS/main.js"></script>
 <script type="text/javascript" src="JS/destroyToken.js"></script>
+<script type="text/javascript" src="JS/edit.js"></script>
  </body>
 </html>
